[tool.poetry]
name = "my-first-project"
version = "0.1.0"
description = ""
authors = ["cybersan123 <157189640+cybersan123@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
