[tool.poetry]
name = "weather"
version = "0.1.0"
description = ""
authors = ["cybersan123 <157189640+cybersan123@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dbt-core = "^1.7.9"
dbt-postgres = "^1.7.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
